--- a/www/js/views/home/homeTemplate.html
+++ b/www/js/views/home/homeTemplate.html
@@ -29,7 +29,7 @@
       </div>
       <div class="votally-title-bar-center">
         <div class="votally-title-name">
-          <img src="./img/logo-40px-y.png">
+          <img src="./www/img/logo-40px-y.png">
         </div>
       </div>
     </div>
